# fluxbox_paul

./: .gitignore  ChangeLog  Makefile.am  configure.in  luatoc.sh
data/: Makefile.am  init.in  init.lua.in  keys.lua  windowmenu  windowmenu.lua
doc/: Makefile.am
doc/asciidoc/: fluxbox-keys.txt  fluxbox-menu.txt  fluxbox-style.txt  fluxbox.txt
libs/: Makefile.am
libs/lua/src/: Makefile  luaconf.h
nls/: fluxbox-nls.hh
nls/C/: Translation.m
src/: AtomHandler.hh  AttentionNoticeHandler.cc  ClientMenu.cc  ClockTool.cc  ClockTool.hh  ColSmartPlacement.cc  Ewmh.cc  FbAtoms.cc  FbAtoms.hh  FbCommands.cc  FbCommands.hh  FbWinFrame.cc  FbWinFrame.hh  FocusControl.cc  FocusControl.hh  FocusModelMenuItem.hh  IconButton.cc  IconButton.hh  IconbarTool.cc  IconbarTool.hh  Keys.cc  Keys.hh  Layer.hh  LayerMenu.cc  Makefile.am  MenuCreator.cc  MenuCreator.hh  MinOverlapPlacement.cc  Remember.cc  Remember.hh  Resources.cc  Resources.hh  RootCmdMenuItem.cc  RowSmartPlacement.cc  Screen.cc  Screen.hh  ScreenPlacement.cc  ScreenPlacement.hh  SendToMenu.cc  Slit.cc  (+17 more)
src/FbTk/: AutoReloadHelper.cc  AutoReloadHelper.hh  FbWindow.cc  ImageControl.cc  ImageControl.hh  LResource.cc  LResource.hh  LResourceHelper.lua  LuaUtil.cc  LuaUtil.hh  Luamm.cc  Luamm.hh  Makefile.am  Menu.cc  Menu.hh  MenuItem.cc  MenuItem.hh  MultiButtonMenuItem.cc  MultiButtonMenuItem.hh  RadioMenuItem.hh  ResTraits.hh  Resource.cc  Resource.hh
util/: FbMenuParser.cc  FbMenuParser.hh  Makefile.am  MenuConvertor.cc  MenuConvertor.hh  fluxbox-generate_menu.in  fluxbox-update_configs.cc  update_keys.lua
util/fbautostart/: COPYRIGHT  ChangeLog  Makefile.am  Makefile.old
util/fbautostart/include/: dot_desktop.hh  fbautostart.hh
util/fbautostart/src/: dot_desktop.cc  fbautostart.cc  main.cc
util/fbcompose/: Atoms.cc  Atoms.hh  BaseCompWindow.cc  BaseCompWindow.hh  BasePlugin.cc  BasePlugin.hh  BaseScreen.cc  BaseScreen.hh  Compositor.cc  Compositor.hh  CompositorConfig.cc  CompositorConfig.hh  Constants.hh  Enumerations.hh  Exceptions.hh  Logging.cc  Logging.hh  Makefile.am  OpenGLPlugin.cc  OpenGLPlugin.hh  OpenGLResources.cc  OpenGLResources.hh  OpenGLScreen.cc  OpenGLScreen.hh  OpenGLShaders.cc  OpenGLShaders.hh  OpenGLTexPartitioner.cc  OpenGLTexPartitioner.hh  OpenGLUtility.cc  OpenGLUtility.hh  OpenGLWindow.cc  OpenGLWindow.hh  PluginManager.cc  PluginManager.hh  ServerAutoApp.cc  ServerAutoApp.hh  TickTracker.cc  TickTracker.hh  Utility.cc  Utility.hh  (+10 more)
util/fbcompose/plugins/: Makefile.am  README
util/fbcompose/plugins/opengl/fade/: FadePlugin.cc  FadePlugin.hh  Makefile.am
util/fbcompose/plugins/opengl/preview/: Makefile.am  PreviewPlugin.cc  PreviewPlugin.hh
util/fbcompose/plugins/xrender/: Makefile.am
util/fbcompose/plugins/xrender/fade/: FadePlugin.cc  FadePlugin.hh  Makefile.am
util/fbcompose/plugins/xrender/preview/: Makefile.am  PreviewPlugin.cc  PreviewPlugin.hh
