# FBAutoStart automakefile.
INCLUDES            = -I./include 
bin_PROGRAMS        = fbautostart
fbautostart_SOURCES = src/comment.cc src/key.cc src/state.cc src/xdg_parse.cc \
	src/entry.cc src/machine.cc src/value.cc src/xdg_spec.cc src/group.cc \
	src/main.cc src/xdg_autostart.cc src/invalid.cc src/Makefile \
	src/xdg_model.cc
